[FEAT]: add service for send email

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@
 
 DATABASE_URL=""
 PORT=3333
+
+MAILER_HOST=
+MAILER_PORT= 
+MAILER_IGNORE_TLS=
+MAILER_SECURE=
+MAILER_INCOMING_USER=
+MAILER_INCOMING_PASS=
+MAILER_FROM=
