--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server-nest",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Api de envio de feedback.",
+  "author": "Pedro Santos",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
